--- a/index.html
+++ b/index.html
@@ -1,1 +1,132 @@
+HTML_POLITICA_PRIVACIDADE = '''
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8">
+  <title>Política de Privacidade — Genly</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" type="image/png" href="/static/favicon.png">
+  <link rel="apple-touch-icon" href="/static/favicon.png">
+  <meta name="theme-color" content="#0B3B70">
 
+  <style>
+    @font-face{
+      font-family:'Satoshi';
+      src:url('/static/fonts/Satoshi/Satoshi-Variable.ttf') format('truetype-variations');
+      font-weight:200 900; font-style:normal; font-display:swap;
+    }
+    @font-face{
+      font-family:'Satoshi';
+      src:url('/static/fonts/Satoshi/Satoshi-VariableItalic.ttf') format('truetype-variations');
+      font-weight:200 900; font-style:italic; font-display:swap;
+    }
+
+    :root{
+      --bg-from:#0369A1;
+      --bg-to:#10B981;
+      --card:#ffffff;
+      --text:#111827;
+      --muted:#6B7280;
+      --pri:#1877f2;
+      --radius:16px;
+      --shadow:0 12px 40px rgba(0,0,0,.12);
+    }
+
+    *{box-sizing:border-box;}
+    body{
+      margin:0;
+      font-family:'Satoshi',system-ui,-apple-system,sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 800px at 20% 10%,rgba(255,255,255,.18),transparent 60%),
+        linear-gradient(135deg,var(--bg-from),var(--bg-to));
+      min-height:100vh;
+      display:grid;
+      place-items:center;
+      padding:32px 16px;
+    }
+
+    .card{
+      background:var(--card);
+      width:min(780px,100%);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:40px 36px;
+      animation:fadeUp .45s ease-out both;
+    }
+
+    .brand{
+      display:flex;justify-content:center;align-items:center;
+      margin-top:-4px;margin-bottom:20px;
+      animation:fadeIn .6s ease-out .1s both;
+    }
+    .brand img{width:90px;height:auto;display:block;}
+
+    h1{font-size:26px;margin-bottom:16px;text-align:center;}
+    h2{font-size:18px;margin-top:32px;color:#111827;}
+    p{line-height:1.6;color:#374151;margin:12px 0;}
+
+    a{color:var(--pri);text-decoration:none;}
+    a:hover{text-decoration:underline;}
+
+    .back{
+      display:flex;justify-content:center;margin-top:28px;
+    }
+    .btn{
+      appearance:none;border:0;cursor:pointer;
+      background:var(--pri);color:#fff;font-weight:700;
+      padding:12px 18px;border-radius:12px;
+      box-shadow:0 6px 20px rgba(24,119,242,.35);
+      transition:transform .05s ease-in-out,opacity .15s;
+      text-decoration:none;display:inline-flex;align-items:center;gap:8px;
+    }
+    .btn:active{transform:translateY(1px)}
+
+    @keyframes fadeUp{
+      from{opacity:0;transform:translateY(8px) scale(.98)}
+      to{opacity:1;transform:translateY(0) scale(1)}
+    }
+    @keyframes fadeIn{
+      from{opacity:0;transform:translateY(4px)}
+      to{opacity:1;transform:translateY(0)}
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <div class="brand">
+      <img src="/static/logo-semfundo.png" alt="Genly">
+    </div>
+
+    <h1>Política de Privacidade</h1>
+
+    <p>Na <strong>Genly</strong>, respeitamos sua privacidade e estamos comprometidos em proteger seus dados pessoais. 
+    Esta política descreve como coletamos, utilizamos e armazenamos suas informações ao utilizar nossos serviços.</p>
+
+    <h2>1. Coleta de Informações</h2>
+    <p>Coletamos dados como nome, telefone (WhatsApp) e identificadores de contas conectadas (ex: Facebook) apenas 
+    para realizar a autenticação segura e melhorar sua experiência dentro da plataforma.</p>
+
+    <h2>2. Uso dos Dados</h2>
+    <p>Os dados são utilizados exclusivamente para autenticação, comunicação via WhatsApp e personalização dos serviços
+    oferecidos pela Genly. Não compartilhamos suas informações com terceiros sem o seu consentimento.</p>
+
+    <h2>3. Armazenamento e Segurança</h2>
+    <p>Adotamos medidas técnicas e administrativas para proteger suas informações contra acessos não autorizados, 
+    perdas ou modificações indevidas.</p>
+
+    <h2>4. Direitos do Usuário</h2>
+    <p>Você pode solicitar a exclusão ou atualização dos seus dados a qualquer momento, entrando em contato com nossa equipe
+    pelo e-mail <a href="mailto:suporte@genly.ai">suporte@genly.ai</a>.</p>
+
+    <h2>5. Alterações na Política</h2>
+    <p>Esta política pode ser atualizada periodicamente. Qualquer alteração relevante será comunicada por meio do site
+    ou dos canais de contato cadastrados.</p>
+
+    <div class="back">
+      <a href="/" class="btn">Voltar à página inicial</a>
+    </div>
+  </div>
+</body>
+</html>
+'''
